Bug 346510 - Nikon D810 metadata not all available
Summary: Nikon D810 metadata not all available
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.13.1
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: Tom Moebert
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-23 15:26 UTC by Pete
Modified: 2019-05-15 20:29 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.08.0
Sentry Crash Report:


Attachments
Fix incomplete EXIF data for RAW files (1.57 KB, patch)
2019-05-12 15:30 UTC, Tom Moebert
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pete 2015-04-23 15:26:11 UTC
There are ~200 metadata fields in a NEF raw file.  Only about 20 are visible in Gwenview.

Reproducible: Always

Steps to Reproduce:
1. open NEF file
2. click More ... in the metadata viewing pane in the upper left
3. scroll through the Image Information window

Actual Results:  
You only see 21 metadata fields.

Expected Results:  
I expect to see all ~200 metadata fields.
Comment 1 Nate Graham 2017-11-09 16:56:08 UTC
Can you please attach a NEF file full of metadata that we can use as a reference?
Comment 2 Pete 2017-11-12 00:53:36 UTC
You can access a NEF file here:

https://www.dropbox.com/s/l1ieij7erfaey4a/DSC_0965.NEF?dl=0

Note that Gwenview has changed radically since opening this case.  In version 15.12.3, the latest available on Ubuntu 16.04.0, no metadata at all appears to be available.
Comment 3 Nate Graham 2017-11-12 20:14:10 UTC
Confirmed, I see what you mean now.
Comment 4 Tom Moebert 2019-05-12 15:30:45 UTC
Created attachment 120013 [details]
Fix incomplete EXIF data for RAW files

Attached is a trivial patch that should resolve the issue. Tested with Canon (.cr2), Nikon (.nef) and Sony (.arw). Cannot post it to Phabricator as it seems to be currently down. As being a new contributor, I can't use the Review Board either.
Comment 5 Nate Graham 2019-05-12 15:36:49 UTC
Thanks very much for the patch! Would you be able to submit it using https://http://phabricator.kde.org?

It's very easy. Here's the documentation: https://community.kde.org/Infrastructure/Phabricator
Comment 6 Tom Moebert 2019-05-12 15:44:14 UTC
No I can't. As already explained, neither https://http://phabricator.kde.org, nor https://phabricator.kde.org, nor http://phabricator.kde.org works for me. Timeout during TLS handshake as it seems.
Comment 7 Nate Graham 2019-05-12 15:50:44 UTC
Oh duh, poor reading comprehension my part. You're right, Phab seems down. :/ Try again when it's back up, I guess. Usually these hiccups don't last longer than an hour or two.
Comment 8 Nate Graham 2019-05-12 18:42:08 UTC
Phab's back up now, BTW.
Comment 9 Nate Graham 2019-05-15 20:29:37 UTC
Git commit a985ad14dc073653e996deeee7550dbb58653ce2 by Nate Graham, on behalf of Tom Moebert.
Committed on 15/05/2019 at 20:29.
Pushed by ngraham into branch 'master'.

Fix incomplete EXIF data for RAW files

Summary:
In case of RAW files exiv2 retrieved the EXIF data from the JPEG preview
image `previewData`. This however contains incomplete EXIF data. Thus
provide exiv2 with the full raw image and let it find the most suitable
EXIF data chunk.

Reviewers: #gwenview, ngraham

Reviewed By: #gwenview, ngraham

Subscribers: ngraham

Tags: #gwenview

Differential Revision: https://phabricator.kde.org/D21161

M  +5    -5    lib/document/loadingdocumentimpl.cpp

https://commits.kde.org/gwenview/a985ad14dc073653e996deeee7550dbb58653ce2