Fix incomplete EXIF data for RAW files

Summary:
In case of RAW files exiv2 retrieved the EXIF data from the JPEG preview
image `previewData`. This however contains incomplete EXIF data. Thus
provide exiv2 with the full raw image and let it find the most suitable
EXIF data chunk.

BUG: 346510

Reviewers: #gwenview, ngraham

Reviewed By: #gwenview, ngraham

Subscribers: ngraham

Tags: #gwenview

Differential Revision: https://phabricator.kde.org/D21161